--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -3,7 +3,10 @@ name: Scheduled Health Check
 # Controls when the action will run.
 on:
   schedule:
-    - cron: "10 * * * *"
+    - cron: "*/10 * * * *"
+    
+on:
+  workflow_dispatch:
  
 jobs:
   health_check_job:
