--- a/urls.cfg
+++ b/urls.cfg
@@ -1,2 +1,2 @@
-plesk=https://plesk.presswizards.com
-plesk3=https://plesk3.presswizards.com
+plesk=https://plesk.presswizards.com/login_up.php
+plesk3=https://plesk3.presswizards.com/login_up.php
